// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button ui-component заблокирована и не активна 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Button ui-component заблокирована индикатором загрузки и не активна 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  data-testid="buttonTest"
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Button ui-component рендерится c текстом 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  >
    Click me
  </p>
</button>
`;

exports[`Button ui-component рендерится без текста 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;
